integration of flash messages

--- a/mdblog/templates/_main.jinja2
+++ b/mdblog/templates/_main.jinja2
@@ -8,11 +8,22 @@
 </head>
 <body>
 
+{% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+        <ul class="flashes">
+            {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
+
 <header>
     <h1><a href="{{ url_for('view_welcome_page') }}">Pavol Jurak</a></h1>
 </header>
 
 {% include "_nav.jinja2" %}
+
 
 <main>
     {% block main %} {% endblock %}
