--- a/mdblog/static/css/style.css
+++ b/mdblog/static/css/style.css
@@ -2,6 +2,28 @@
             padding: 0 20%;
         }
         header { text-align: center; }
+
+        .flashes {
+            padding: 0;
+            position: static;
+            top: 0;
+            width: 100%;
+        }
+        .flashes li {
+            list-style: none;
+            border-style: solid;
+            border-width: 1px;
+            border-color: lightgray;
+            padding: 3px;
+            text-align: center;
+        }
+        .flashes .success {
+            background-color: lightgreen;
+        }
+        .flashes .alert {
+            background-color: lightcoral;
+        }
+
         .nav {
             padding: 0;
             list-style: none;
